k8s/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      component: client
  template:
    metadata:
      labels:
        component: client
    spec:
      containers:
        - name: client
          image: mveyone/nginx-mern-client-prod:latest
          ports:
            - containerPort: 80 # port of dockerfile
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  type: ClusterIP
  selector:
    component: client
  ports:
    - port: 80
      targetPort: 80 # internal port of container
